y.output
Terminals unused in grammar

    CHARACTER


Rules useless in parser due to conflicts

    7 $@2: ε

   53 ListaParametros: ListaParametros TVIRG STRING
   55                | STRING


State 34 conflicts: 1 reduce/reduce
State 44 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 66 conflicts: 2 reduce/reduce
State 70 conflicts: 1 shift/reduce
State 103 conflicts: 4 shift/reduce
State 114 conflicts: 2 shift/reduce
State 117 conflicts: 2 reduce/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: ListaFuncoes BlocoPrincipal
    2         | BlocoPrincipal

    3 ListaFuncoes: ListaFuncoes Funcao
    4             | Funcao

    5 $@1: ε

    6 Funcao: TipoRetorno ID $@1 TAPAR DeclParametros TFPAR BlocoPrincipal

    7 $@2: ε

    8 Funcao: TipoRetorno ID $@2 TAPAR TFPAR BlocoPrincipal

    9 TipoRetorno: Tipo
   10            | VOID

   11 DeclParametros: DeclParametros TVIRG Parametro
   12               | Parametro

   13 Parametro: Tipo ID

   14 BlocoPrincipal: TACHA Declaracoes ListaCmd TFCHA
   15               | TACHA ListaCmd TFCHA

   16 Declaracoes: Declaracoes Declaracao
   17            | Declaracao

   18 Declaracao: Tipo ListaId TPEVI

   19 ListaId: ListaId TVIRG ID
   20        | ID

   21 Tipo: INT
   22     | FLOAT
   23     | STRING

   24 ListaCmd: ListaCmd Comando
   25         | Comando

   26 Comando: CmdSe
   27        | CmdEnquanto
   28        | CmdAtrib
   29        | CmdEscrita
   30        | CmdLeitura
   31        | ChamadaProc
   32        | Retorno

   33 value: NUMBER
   34      | FLOAT_NUM
   35      | STRING
   36      | ID

   37 Retorno: RETURN ExpressaoAritmetica TPEVI
   38        | RETURN STRING TPEVI
   39        | RETURN TPEVI

   40 CmdEnquanto: WHILE TAPAR ExpressaoLogica TFPAR Bloco

   41 Bloco: TACHA ListaCmd TFCHA

   42 CmdSe: IF TAPAR ExpressaoLogica TFPAR Bloco
   43      | IF TAPAR ExpressaoLogica TFPAR Bloco ELSE Bloco

   44 CmdAtrib: ID TATRI ExpressaoAritmetica TPEVI
   45         | ID TATRI STRING TPEVI

   46 CmdEscrita: PRINT TAPAR STRING TFPAR TPEVI
   47           | PRINT TAPAR ExpressaoAritmetica TFPAR TPEVI

   48 CmdLeitura: READ TAPAR ID TFPAR TPEVI

   49 ChamadaProc: ChamadaFuncao TPEVI

   50 ChamadaFuncao: ID TAPAR ListaParametros TFPAR
   51              | ID TAPAR TFPAR

   52 ListaParametros: ListaParametros TVIRG ExpressaoAritmetica
   53                | ListaParametros TVIRG STRING
   54                | ExpressaoAritmetica
   55                | STRING

   56 OperadoresAritmeticos: ADD
   57                      | SUBTRACT
   58                      | MULTIPLY
   59                      | DIVIDE

   60 OperadoresRelacionais: TMENO
   61                      | TMAIO
   62                      | TMEIG
   63                      | TMAIG
   64                      | TIGUA
   65                      | TDIFE

   66 OperadoresLogicos: AND
   67                  | OR

   68 expressaoRelacional: ExpressaoAritmetica OperadoresRelacionais ExpressaoAritmetica

   69 ExpressaoLogica: ExpressaoLogica OperadoresLogicos ExpressaoLogica
   70                | expressaoRelacional

   71 ExpressaoAritmetica: ExpressaoAritmetica OperadoresAritmeticos ExpressaoAritmetica
   72                    | value
   73                    | ChamadaFuncao


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VOID <nd_obj> (258) 10
    CHARACTER <nd_obj> (259)
    PRINT <nd_obj> (260) 46 47
    READ <nd_obj> (261) 48
    INT <nd_obj> (262) 21
    FLOAT <nd_obj> (263) 22
    WHILE <nd_obj> (264) 40
    IF <nd_obj> (265) 42 43
    ELSE <nd_obj> (266) 43
    NUMBER <nd_obj> (267) 33
    FLOAT_NUM <nd_obj> (268) 34
    ID <nd_obj> (269) 6 8 13 19 20 36 44 45 48 50 51
    TMEIG <nd_obj> (270) 62
    TMAIG <nd_obj> (271) 63
    TIGUA <nd_obj> (272) 64
    TDIFE <nd_obj> (273) 65
    TMAIO <nd_obj> (274) 61
    TMENO <nd_obj> (275) 60
    AND <nd_obj> (276) 66
    OR <nd_obj> (277) 67
    STRING <nd_obj> (278) 23 35 38 45 46 53 55
    ADD <nd_obj> (279) 56
    MULTIPLY <nd_obj> (280) 58
    DIVIDE <nd_obj> (281) 59
    SUBTRACT <nd_obj> (282) 57
    RETURN <nd_obj> (283) 37 38 39
    TAPAR <nd_obj> (284) 6 8 40 42 43 46 47 48 50 51
    TFPAR <nd_obj> (285) 6 8 40 42 43 46 47 48 50 51
    TACHA <nd_obj> (286) 14 15 41
    TFCHA <nd_obj> (287) 14 15 41
    TPEVI <nd_obj> (288) 18 37 38 39 44 45 46 47 48 49
    TATRI <nd_obj> (289) 44 45
    TVIRG <nd_obj> (290) 11 19 52 53


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    Programa <nd_obj> (37)
        on left: 1 2
        on right: 0
    ListaFuncoes <nd_obj> (38)
        on left: 3 4
        on right: 1 3
    Funcao <nd_obj> (39)
        on left: 6 8
        on right: 3 4
    $@1 (40)
        on left: 5
        on right: 6
    $@2 (41)
        on left: 7
        on right: 8
    TipoRetorno <nd_obj> (42)
        on left: 9 10
        on right: 6 8
    DeclParametros <nd_obj> (43)
        on left: 11 12
        on right: 6 11
    Parametro <nd_obj> (44)
        on left: 13
        on right: 11 12
    BlocoPrincipal <nd_obj> (45)
        on left: 14 15
        on right: 1 2 6 8
    Declaracoes <nd_obj> (46)
        on left: 16 17
        on right: 14 16
    Declaracao <nd_obj> (47)
        on left: 18
        on right: 16 17
    ListaId <nd_obj> (48)
        on left: 19 20
        on right: 18 19
    Tipo <nd_obj> (49)
        on left: 21 22 23
        on right: 9 13 18
    ListaCmd <nd_obj> (50)
        on left: 24 25
        on right: 14 15 24 41
    Comando <nd_obj> (51)
        on left: 26 27 28 29 30 31 32
        on right: 24 25
    value <nd_obj> (52)
        on left: 33 34 35 36
        on right: 72
    Retorno <nd_obj> (53)
        on left: 37 38 39
        on right: 32
    CmdEnquanto <nd_obj> (54)
        on left: 40
        on right: 27
    Bloco <nd_obj> (55)
        on left: 41
        on right: 40 42 43
    CmdSe <nd_obj> (56)
        on left: 42 43
        on right: 26
    CmdAtrib <nd_obj> (57)
        on left: 44 45
        on right: 28
    CmdEscrita <nd_obj> (58)
        on left: 46 47
        on right: 29
    CmdLeitura <nd_obj> (59)
        on left: 48
        on right: 30
    ChamadaProc <nd_obj> (60)
        on left: 49
        on right: 31
    ChamadaFuncao <nd_obj> (61)
        on left: 50 51
        on right: 49 73
    ListaParametros <nd_obj> (62)
        on left: 52 53 54 55
        on right: 50 52 53
    OperadoresAritmeticos <nd_obj> (63)
        on left: 56 57 58 59
        on right: 71
    OperadoresRelacionais <nd_obj> (64)
        on left: 60 61 62 63 64 65
        on right: 68
    OperadoresLogicos <nd_obj> (65)
        on left: 66 67
        on right: 69
    expressaoRelacional <nd_obj> (66)
        on left: 68
        on right: 70
    ExpressaoLogica <nd_obj> (67)
        on left: 69 70
        on right: 40 42 43 69
    ExpressaoAritmetica <nd_obj> (68)
        on left: 71 72 73
        on right: 37 44 47 52 54 68 71


State 0

    0 $accept: • Programa $end

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    STRING  shift, and go to state 4
    TACHA   shift, and go to state 5

    Programa        go to state 6
    ListaFuncoes    go to state 7
    Funcao          go to state 8
    TipoRetorno     go to state 9
    BlocoPrincipal  go to state 10
    Tipo            go to state 11


State 1

   10 TipoRetorno: VOID •

    $default  reduce using rule 10 (TipoRetorno)


State 2

   21 Tipo: INT •

    $default  reduce using rule 21 (Tipo)


State 3

   22 Tipo: FLOAT •

    $default  reduce using rule 22 (Tipo)


State 4

   23 Tipo: STRING •

    $default  reduce using rule 23 (Tipo)


State 5

   14 BlocoPrincipal: TACHA • Declaracoes ListaCmd TFCHA
   15               | TACHA • ListaCmd TFCHA

    PRINT   shift, and go to state 12
    READ    shift, and go to state 13
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    WHILE   shift, and go to state 14
    IF      shift, and go to state 15
    ID      shift, and go to state 16
    STRING  shift, and go to state 4
    RETURN  shift, and go to state 17

    Declaracoes    go to state 18
    Declaracao     go to state 19
    Tipo           go to state 20
    ListaCmd       go to state 21
    Comando        go to state 22
    Retorno        go to state 23
    CmdEnquanto    go to state 24
    CmdSe          go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdLeitura     go to state 28
    ChamadaProc    go to state 29
    ChamadaFuncao  go to state 30


State 6

    0 $accept: Programa • $end

    $end  shift, and go to state 31


State 7

    1 Programa: ListaFuncoes • BlocoPrincipal
    3 ListaFuncoes: ListaFuncoes • Funcao

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    STRING  shift, and go to state 4
    TACHA   shift, and go to state 5

    Funcao          go to state 32
    TipoRetorno     go to state 9
    BlocoPrincipal  go to state 33
    Tipo            go to state 11


State 8

    4 ListaFuncoes: Funcao •

    $default  reduce using rule 4 (ListaFuncoes)


State 9

    6 Funcao: TipoRetorno • ID $@1 TAPAR DeclParametros TFPAR BlocoPrincipal
    8       | TipoRetorno • ID $@2 TAPAR TFPAR BlocoPrincipal

    ID  shift, and go to state 34


State 10

    2 Programa: BlocoPrincipal •

    $default  reduce using rule 2 (Programa)


State 11

    9 TipoRetorno: Tipo •

    $default  reduce using rule 9 (TipoRetorno)


State 12

   46 CmdEscrita: PRINT • TAPAR STRING TFPAR TPEVI
   47           | PRINT • TAPAR ExpressaoAritmetica TFPAR TPEVI

    TAPAR  shift, and go to state 35


State 13

   48 CmdLeitura: READ • TAPAR ID TFPAR TPEVI

    TAPAR  shift, and go to state 36


State 14

   40 CmdEnquanto: WHILE • TAPAR ExpressaoLogica TFPAR Bloco

    TAPAR  shift, and go to state 37


State 15

   42 CmdSe: IF • TAPAR ExpressaoLogica TFPAR Bloco
   43      | IF • TAPAR ExpressaoLogica TFPAR Bloco ELSE Bloco

    TAPAR  shift, and go to state 38


State 16

   44 CmdAtrib: ID • TATRI ExpressaoAritmetica TPEVI
   45         | ID • TATRI STRING TPEVI
   50 ChamadaFuncao: ID • TAPAR ListaParametros TFPAR
   51              | ID • TAPAR TFPAR

    TAPAR  shift, and go to state 39
    TATRI  shift, and go to state 40


State 17

   37 Retorno: RETURN • ExpressaoAritmetica TPEVI
   38        | RETURN • STRING TPEVI
   39        | RETURN • TPEVI

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 44
    TPEVI      shift, and go to state 45

    value                go to state 46
    ChamadaFuncao        go to state 47
    ExpressaoAritmetica  go to state 48


State 18

   14 BlocoPrincipal: TACHA Declaracoes • ListaCmd TFCHA
   16 Declaracoes: Declaracoes • Declaracao

    PRINT   shift, and go to state 12
    READ    shift, and go to state 13
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    WHILE   shift, and go to state 14
    IF      shift, and go to state 15
    ID      shift, and go to state 16
    STRING  shift, and go to state 4
    RETURN  shift, and go to state 17

    Declaracao     go to state 49
    Tipo           go to state 20
    ListaCmd       go to state 50
    Comando        go to state 22
    Retorno        go to state 23
    CmdEnquanto    go to state 24
    CmdSe          go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdLeitura     go to state 28
    ChamadaProc    go to state 29
    ChamadaFuncao  go to state 30


State 19

   17 Declaracoes: Declaracao •

    $default  reduce using rule 17 (Declaracoes)


State 20

   18 Declaracao: Tipo • ListaId TPEVI

    ID  shift, and go to state 51

    ListaId  go to state 52


State 21

   15 BlocoPrincipal: TACHA ListaCmd • TFCHA
   24 ListaCmd: ListaCmd • Comando

    PRINT   shift, and go to state 12
    READ    shift, and go to state 13
    WHILE   shift, and go to state 14
    IF      shift, and go to state 15
    ID      shift, and go to state 16
    RETURN  shift, and go to state 17
    TFCHA   shift, and go to state 53

    Comando        go to state 54
    Retorno        go to state 23
    CmdEnquanto    go to state 24
    CmdSe          go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdLeitura     go to state 28
    ChamadaProc    go to state 29
    ChamadaFuncao  go to state 30


State 22

   25 ListaCmd: Comando •

    $default  reduce using rule 25 (ListaCmd)


State 23

   32 Comando: Retorno •

    $default  reduce using rule 32 (Comando)


State 24

   27 Comando: CmdEnquanto •

    $default  reduce using rule 27 (Comando)


State 25

   26 Comando: CmdSe •

    $default  reduce using rule 26 (Comando)


State 26

   28 Comando: CmdAtrib •

    $default  reduce using rule 28 (Comando)


State 27

   29 Comando: CmdEscrita •

    $default  reduce using rule 29 (Comando)


State 28

   30 Comando: CmdLeitura •

    $default  reduce using rule 30 (Comando)


State 29

   31 Comando: ChamadaProc •

    $default  reduce using rule 31 (Comando)


State 30

   49 ChamadaProc: ChamadaFuncao • TPEVI

    TPEVI  shift, and go to state 55


State 31

    0 $accept: Programa $end •

    $default  accept


State 32

    3 ListaFuncoes: ListaFuncoes Funcao •

    $default  reduce using rule 3 (ListaFuncoes)


State 33

    1 Programa: ListaFuncoes BlocoPrincipal •

    $default  reduce using rule 1 (Programa)


State 34

    6 Funcao: TipoRetorno ID • $@1 TAPAR DeclParametros TFPAR BlocoPrincipal
    8       | TipoRetorno ID • $@2 TAPAR TFPAR BlocoPrincipal

    TAPAR     reduce using rule 5 ($@1)
    TAPAR     [reduce using rule 7 ($@2)]
    $default  reduce using rule 5 ($@1)

    $@1  go to state 56
    $@2  go to state 57


State 35

   46 CmdEscrita: PRINT TAPAR • STRING TFPAR TPEVI
   47           | PRINT TAPAR • ExpressaoAritmetica TFPAR TPEVI

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 58

    value                go to state 46
    ChamadaFuncao        go to state 47
    ExpressaoAritmetica  go to state 59


State 36

   48 CmdLeitura: READ TAPAR • ID TFPAR TPEVI

    ID  shift, and go to state 60


State 37

   40 CmdEnquanto: WHILE TAPAR • ExpressaoLogica TFPAR Bloco

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 61

    value                go to state 46
    ChamadaFuncao        go to state 47
    expressaoRelacional  go to state 62
    ExpressaoLogica      go to state 63
    ExpressaoAritmetica  go to state 64


State 38

   42 CmdSe: IF TAPAR • ExpressaoLogica TFPAR Bloco
   43      | IF TAPAR • ExpressaoLogica TFPAR Bloco ELSE Bloco

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 61

    value                go to state 46
    ChamadaFuncao        go to state 47
    expressaoRelacional  go to state 62
    ExpressaoLogica      go to state 65
    ExpressaoAritmetica  go to state 64


State 39

   50 ChamadaFuncao: ID TAPAR • ListaParametros TFPAR
   51              | ID TAPAR • TFPAR

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 66
    TFPAR      shift, and go to state 67

    value                go to state 46
    ChamadaFuncao        go to state 47
    ListaParametros      go to state 68
    ExpressaoAritmetica  go to state 69


State 40

   44 CmdAtrib: ID TATRI • ExpressaoAritmetica TPEVI
   45         | ID TATRI • STRING TPEVI

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 70

    value                go to state 46
    ChamadaFuncao        go to state 47
    ExpressaoAritmetica  go to state 71


State 41

   33 value: NUMBER •

    $default  reduce using rule 33 (value)


State 42

   34 value: FLOAT_NUM •

    $default  reduce using rule 34 (value)


State 43

   36 value: ID •
   50 ChamadaFuncao: ID • TAPAR ListaParametros TFPAR
   51              | ID • TAPAR TFPAR

    TAPAR  shift, and go to state 39

    $default  reduce using rule 36 (value)


State 44

   35 value: STRING •
   38 Retorno: RETURN STRING • TPEVI

    TPEVI  shift, and go to state 72

    TPEVI     [reduce using rule 35 (value)]
    $default  reduce using rule 35 (value)


State 45

   39 Retorno: RETURN TPEVI •

    $default  reduce using rule 39 (Retorno)


State 46

   72 ExpressaoAritmetica: value •

    $default  reduce using rule 72 (ExpressaoAritmetica)


State 47

   73 ExpressaoAritmetica: ChamadaFuncao •

    $default  reduce using rule 73 (ExpressaoAritmetica)


State 48

   37 Retorno: RETURN ExpressaoAritmetica • TPEVI
   71 ExpressaoAritmetica: ExpressaoAritmetica • OperadoresAritmeticos ExpressaoAritmetica

    ADD       shift, and go to state 73
    MULTIPLY  shift, and go to state 74
    DIVIDE    shift, and go to state 75
    SUBTRACT  shift, and go to state 76
    TPEVI     shift, and go to state 77

    OperadoresAritmeticos  go to state 78


State 49

   16 Declaracoes: Declaracoes Declaracao •

    $default  reduce using rule 16 (Declaracoes)


State 50

   14 BlocoPrincipal: TACHA Declaracoes ListaCmd • TFCHA
   24 ListaCmd: ListaCmd • Comando

    PRINT   shift, and go to state 12
    READ    shift, and go to state 13
    WHILE   shift, and go to state 14
    IF      shift, and go to state 15
    ID      shift, and go to state 16
    RETURN  shift, and go to state 17
    TFCHA   shift, and go to state 79

    Comando        go to state 54
    Retorno        go to state 23
    CmdEnquanto    go to state 24
    CmdSe          go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdLeitura     go to state 28
    ChamadaProc    go to state 29
    ChamadaFuncao  go to state 30


State 51

   20 ListaId: ID •

    $default  reduce using rule 20 (ListaId)


State 52

   18 Declaracao: Tipo ListaId • TPEVI
   19 ListaId: ListaId • TVIRG ID

    TPEVI  shift, and go to state 80
    TVIRG  shift, and go to state 81


State 53

   15 BlocoPrincipal: TACHA ListaCmd TFCHA •

    $default  reduce using rule 15 (BlocoPrincipal)


State 54

   24 ListaCmd: ListaCmd Comando •

    $default  reduce using rule 24 (ListaCmd)


State 55

   49 ChamadaProc: ChamadaFuncao TPEVI •

    $default  reduce using rule 49 (ChamadaProc)


State 56

    6 Funcao: TipoRetorno ID $@1 • TAPAR DeclParametros TFPAR BlocoPrincipal

    TAPAR  shift, and go to state 82


State 57

    8 Funcao: TipoRetorno ID $@2 • TAPAR TFPAR BlocoPrincipal

    TAPAR  shift, and go to state 83


State 58

   35 value: STRING •
   46 CmdEscrita: PRINT TAPAR STRING • TFPAR TPEVI

    TFPAR  shift, and go to state 84

    TFPAR     [reduce using rule 35 (value)]
    $default  reduce using rule 35 (value)


State 59

   47 CmdEscrita: PRINT TAPAR ExpressaoAritmetica • TFPAR TPEVI
   71 ExpressaoAritmetica: ExpressaoAritmetica • OperadoresAritmeticos ExpressaoAritmetica

    ADD       shift, and go to state 73
    MULTIPLY  shift, and go to state 74
    DIVIDE    shift, and go to state 75
    SUBTRACT  shift, and go to state 76
    TFPAR     shift, and go to state 85

    OperadoresAritmeticos  go to state 78


State 60

   48 CmdLeitura: READ TAPAR ID • TFPAR TPEVI

    TFPAR  shift, and go to state 86


State 61

   35 value: STRING •

    $default  reduce using rule 35 (value)


State 62

   70 ExpressaoLogica: expressaoRelacional •

    $default  reduce using rule 70 (ExpressaoLogica)


State 63

   40 CmdEnquanto: WHILE TAPAR ExpressaoLogica • TFPAR Bloco
   69 ExpressaoLogica: ExpressaoLogica • OperadoresLogicos ExpressaoLogica

    AND    shift, and go to state 87
    OR     shift, and go to state 88
    TFPAR  shift, and go to state 89

    OperadoresLogicos  go to state 90


State 64

   68 expressaoRelacional: ExpressaoAritmetica • OperadoresRelacionais ExpressaoAritmetica
   71 ExpressaoAritmetica: ExpressaoAritmetica • OperadoresAritmeticos ExpressaoAritmetica

    TMEIG     shift, and go to state 91
    TMAIG     shift, and go to state 92
    TIGUA     shift, and go to state 93
    TDIFE     shift, and go to state 94
    TMAIO     shift, and go to state 95
    TMENO     shift, and go to state 96
    ADD       shift, and go to state 73
    MULTIPLY  shift, and go to state 74
    DIVIDE    shift, and go to state 75
    SUBTRACT  shift, and go to state 76

    OperadoresAritmeticos  go to state 78
    OperadoresRelacionais  go to state 97


State 65

   42 CmdSe: IF TAPAR ExpressaoLogica • TFPAR Bloco
   43      | IF TAPAR ExpressaoLogica • TFPAR Bloco ELSE Bloco
   69 ExpressaoLogica: ExpressaoLogica • OperadoresLogicos ExpressaoLogica

    AND    shift, and go to state 87
    OR     shift, and go to state 88
    TFPAR  shift, and go to state 98

    OperadoresLogicos  go to state 90


State 66

   35 value: STRING •
   55 ListaParametros: STRING •

    TFPAR     reduce using rule 35 (value)
    TFPAR     [reduce using rule 55 (ListaParametros)]
    TVIRG     reduce using rule 35 (value)
    TVIRG     [reduce using rule 55 (ListaParametros)]
    $default  reduce using rule 35 (value)


State 67

   51 ChamadaFuncao: ID TAPAR TFPAR •

    $default  reduce using rule 51 (ChamadaFuncao)


State 68

   50 ChamadaFuncao: ID TAPAR ListaParametros • TFPAR
   52 ListaParametros: ListaParametros • TVIRG ExpressaoAritmetica
   53                | ListaParametros • TVIRG STRING

    TFPAR  shift, and go to state 99
    TVIRG  shift, and go to state 100


State 69

   54 ListaParametros: ExpressaoAritmetica •
   71 ExpressaoAritmetica: ExpressaoAritmetica • OperadoresAritmeticos ExpressaoAritmetica

    ADD       shift, and go to state 73
    MULTIPLY  shift, and go to state 74
    DIVIDE    shift, and go to state 75
    SUBTRACT  shift, and go to state 76

    $default  reduce using rule 54 (ListaParametros)

    OperadoresAritmeticos  go to state 78


State 70

   35 value: STRING •
   45 CmdAtrib: ID TATRI STRING • TPEVI

    TPEVI  shift, and go to state 101

    TPEVI     [reduce using rule 35 (value)]
    $default  reduce using rule 35 (value)


State 71

   44 CmdAtrib: ID TATRI ExpressaoAritmetica • TPEVI
   71 ExpressaoAritmetica: ExpressaoAritmetica • OperadoresAritmeticos ExpressaoAritmetica

    ADD       shift, and go to state 73
    MULTIPLY  shift, and go to state 74
    DIVIDE    shift, and go to state 75
    SUBTRACT  shift, and go to state 76
    TPEVI     shift, and go to state 102

    OperadoresAritmeticos  go to state 78


State 72

   38 Retorno: RETURN STRING TPEVI •

    $default  reduce using rule 38 (Retorno)


State 73

   56 OperadoresAritmeticos: ADD •

    $default  reduce using rule 56 (OperadoresAritmeticos)


State 74

   58 OperadoresAritmeticos: MULTIPLY •

    $default  reduce using rule 58 (OperadoresAritmeticos)


State 75

   59 OperadoresAritmeticos: DIVIDE •

    $default  reduce using rule 59 (OperadoresAritmeticos)


State 76

   57 OperadoresAritmeticos: SUBTRACT •

    $default  reduce using rule 57 (OperadoresAritmeticos)


State 77

   37 Retorno: RETURN ExpressaoAritmetica TPEVI •

    $default  reduce using rule 37 (Retorno)


State 78

   71 ExpressaoAritmetica: ExpressaoAritmetica OperadoresAritmeticos • ExpressaoAritmetica

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 61

    value                go to state 46
    ChamadaFuncao        go to state 47
    ExpressaoAritmetica  go to state 103


State 79

   14 BlocoPrincipal: TACHA Declaracoes ListaCmd TFCHA •

    $default  reduce using rule 14 (BlocoPrincipal)


State 80

   18 Declaracao: Tipo ListaId TPEVI •

    $default  reduce using rule 18 (Declaracao)


State 81

   19 ListaId: ListaId TVIRG • ID

    ID  shift, and go to state 104


State 82

    6 Funcao: TipoRetorno ID $@1 TAPAR • DeclParametros TFPAR BlocoPrincipal

    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    STRING  shift, and go to state 4

    DeclParametros  go to state 105
    Parametro       go to state 106
    Tipo            go to state 107


State 83

    8 Funcao: TipoRetorno ID $@2 TAPAR • TFPAR BlocoPrincipal

    TFPAR  shift, and go to state 108


State 84

   46 CmdEscrita: PRINT TAPAR STRING TFPAR • TPEVI

    TPEVI  shift, and go to state 109


State 85

   47 CmdEscrita: PRINT TAPAR ExpressaoAritmetica TFPAR • TPEVI

    TPEVI  shift, and go to state 110


State 86

   48 CmdLeitura: READ TAPAR ID TFPAR • TPEVI

    TPEVI  shift, and go to state 111


State 87

   66 OperadoresLogicos: AND •

    $default  reduce using rule 66 (OperadoresLogicos)


State 88

   67 OperadoresLogicos: OR •

    $default  reduce using rule 67 (OperadoresLogicos)


State 89

   40 CmdEnquanto: WHILE TAPAR ExpressaoLogica TFPAR • Bloco

    TACHA  shift, and go to state 112

    Bloco  go to state 113


State 90

   69 ExpressaoLogica: ExpressaoLogica OperadoresLogicos • ExpressaoLogica

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 61

    value                go to state 46
    ChamadaFuncao        go to state 47
    expressaoRelacional  go to state 62
    ExpressaoLogica      go to state 114
    ExpressaoAritmetica  go to state 64


State 91

   62 OperadoresRelacionais: TMEIG •

    $default  reduce using rule 62 (OperadoresRelacionais)


State 92

   63 OperadoresRelacionais: TMAIG •

    $default  reduce using rule 63 (OperadoresRelacionais)


State 93

   64 OperadoresRelacionais: TIGUA •

    $default  reduce using rule 64 (OperadoresRelacionais)


State 94

   65 OperadoresRelacionais: TDIFE •

    $default  reduce using rule 65 (OperadoresRelacionais)


State 95

   61 OperadoresRelacionais: TMAIO •

    $default  reduce using rule 61 (OperadoresRelacionais)


State 96

   60 OperadoresRelacionais: TMENO •

    $default  reduce using rule 60 (OperadoresRelacionais)


State 97

   68 expressaoRelacional: ExpressaoAritmetica OperadoresRelacionais • ExpressaoAritmetica

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 61

    value                go to state 46
    ChamadaFuncao        go to state 47
    ExpressaoAritmetica  go to state 115


State 98

   42 CmdSe: IF TAPAR ExpressaoLogica TFPAR • Bloco
   43      | IF TAPAR ExpressaoLogica TFPAR • Bloco ELSE Bloco

    TACHA  shift, and go to state 112

    Bloco  go to state 116


State 99

   50 ChamadaFuncao: ID TAPAR ListaParametros TFPAR •

    $default  reduce using rule 50 (ChamadaFuncao)


State 100

   52 ListaParametros: ListaParametros TVIRG • ExpressaoAritmetica
   53                | ListaParametros TVIRG • STRING

    NUMBER     shift, and go to state 41
    FLOAT_NUM  shift, and go to state 42
    ID         shift, and go to state 43
    STRING     shift, and go to state 117

    value                go to state 46
    ChamadaFuncao        go to state 47
    ExpressaoAritmetica  go to state 118


State 101

   45 CmdAtrib: ID TATRI STRING TPEVI •

    $default  reduce using rule 45 (CmdAtrib)


State 102

   44 CmdAtrib: ID TATRI ExpressaoAritmetica TPEVI •

    $default  reduce using rule 44 (CmdAtrib)


State 103

   71 ExpressaoAritmetica: ExpressaoAritmetica • OperadoresAritmeticos ExpressaoAritmetica
   71                    | ExpressaoAritmetica OperadoresAritmeticos ExpressaoAritmetica •

    ADD       shift, and go to state 73
    MULTIPLY  shift, and go to state 74
    DIVIDE    shift, and go to state 75
    SUBTRACT  shift, and go to state 76

    ADD       [reduce using rule 71 (ExpressaoAritmetica)]
    MULTIPLY  [reduce using rule 71 (ExpressaoAritmetica)]
    DIVIDE    [reduce using rule 71 (ExpressaoAritmetica)]
    SUBTRACT  [reduce using rule 71 (ExpressaoAritmetica)]
    $default  reduce using rule 71 (ExpressaoAritmetica)

    OperadoresAritmeticos  go to state 78


State 104

   19 ListaId: ListaId TVIRG ID •

    $default  reduce using rule 19 (ListaId)


State 105

    6 Funcao: TipoRetorno ID $@1 TAPAR DeclParametros • TFPAR BlocoPrincipal
   11 DeclParametros: DeclParametros • TVIRG Parametro

    TFPAR  shift, and go to state 119
    TVIRG  shift, and go to state 120


State 106

   12 DeclParametros: Parametro •

    $default  reduce using rule 12 (DeclParametros)


State 107

   13 Parametro: Tipo • ID

    ID  shift, and go to state 121


State 108

    8 Funcao: TipoRetorno ID $@2 TAPAR TFPAR • BlocoPrincipal

    TACHA  shift, and go to state 5

    BlocoPrincipal  go to state 122


State 109

   46 CmdEscrita: PRINT TAPAR STRING TFPAR TPEVI •

    $default  reduce using rule 46 (CmdEscrita)


State 110

   47 CmdEscrita: PRINT TAPAR ExpressaoAritmetica TFPAR TPEVI •

    $default  reduce using rule 47 (CmdEscrita)


State 111

   48 CmdLeitura: READ TAPAR ID TFPAR TPEVI •

    $default  reduce using rule 48 (CmdLeitura)


State 112

   41 Bloco: TACHA • ListaCmd TFCHA

    PRINT   shift, and go to state 12
    READ    shift, and go to state 13
    WHILE   shift, and go to state 14
    IF      shift, and go to state 15
    ID      shift, and go to state 16
    RETURN  shift, and go to state 17

    ListaCmd       go to state 123
    Comando        go to state 22
    Retorno        go to state 23
    CmdEnquanto    go to state 24
    CmdSe          go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdLeitura     go to state 28
    ChamadaProc    go to state 29
    ChamadaFuncao  go to state 30


State 113

   40 CmdEnquanto: WHILE TAPAR ExpressaoLogica TFPAR Bloco •

    $default  reduce using rule 40 (CmdEnquanto)


State 114

   69 ExpressaoLogica: ExpressaoLogica • OperadoresLogicos ExpressaoLogica
   69                | ExpressaoLogica OperadoresLogicos ExpressaoLogica •

    AND  shift, and go to state 87
    OR   shift, and go to state 88
